@@ -10,6 +10,7 @@ import technology.rocketjump.undermount.entities.model.physical.item.ItemType;
 import technology.rocketjump.undermount.jobs.model.JobPriority;
 import technology.rocketjump.undermount.mapping.model.ImpendingMiningCollapse;
 import technology.rocketjump.undermount.materials.model.GameMaterial;
+import technology.rocketjump.undermount.misc.twitch.TwitchViewer;
 import technology.rocketjump.undermount.persistence.JSONUtils;
 import technology.rocketjump.undermount.persistence.SavedGameDependentDictionaries;
 import technology.rocketjump.undermount.persistence.model.InvalidSaveException;
@@ -19,10 +20,7 @@ import technology.rocketjump.undermount.settlement.notifications.Notification;
 import technology.rocketjump.undermount.settlement.production.ProductionAssignment;
 import technology.rocketjump.undermount.settlement.production.ProductionQuota;
 
-import java.util.ArrayList;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 
 /**
  * Simple bean to hold "global" settlement data
@@ -46,6 +44,7 @@ public class SettlementState implements Persistable {
 	public final List<ImpendingMiningCollapse> impendingMiningCollapses = new ArrayList<>();
 	public final Map<String, Boolean> previousHints = new HashMap<>();
 	public final List<String> currentHints = new ArrayList<>();
+	public final Set<TwitchViewer> usedTwitchViewers = new HashSet<>();
 
 	private int immigrantsDue;
 	private int immigrantCounter;
@@ -231,6 +230,14 @@ public class SettlementState implements Persistable {
 			asJson.put("craftingRecipeSelections", craftingRecipeSelectionJson);
 		}
 
+		if (!usedTwitchViewers.isEmpty()) {
+			JSONArray viewerNames = new JSONArray();
+			for (TwitchViewer twitchViewer : usedTwitchViewers) {
+				viewerNames.add(twitchViewer.getUsername());
+			}
+			asJson.put("usedTwitchViewers", viewerNames);
+		}
+
 		savedGameStateHolder.setSettlementState(this);
 	}
 
@@ -403,6 +410,13 @@ public class SettlementState implements Persistable {
 					selection.readFrom(selectionJson, savedGameStateHolder, relatedStores);
 					craftingRecipeMaterialSelections.put(recipe, selection);
 				}
+			}
+		}
+
+		JSONArray usedTwitchViewersJson = asJson.getJSONArray("usedTwitchViewers");
+		if (usedTwitchViewersJson != null) {
+			for (Object o : usedTwitchViewersJson) {
+				usedTwitchViewers.add(new TwitchViewer(o.toString()));
 			}
 		}
 	}
