@@ -48,6 +48,7 @@ import technology.rocketjump.undermount.materials.GameMaterialDictionary;
 import technology.rocketjump.undermount.materials.GameMaterialI18nUpdater;
 import technology.rocketjump.undermount.materials.model.GameMaterial;
 import technology.rocketjump.undermount.materials.model.GameMaterialType;
+import technology.rocketjump.undermount.misc.twitch.TwitchDataStore;
 import technology.rocketjump.undermount.persistence.UserPreferences;
 import technology.rocketjump.undermount.rooms.RoomStore;
 import technology.rocketjump.undermount.rooms.StockpileGroupDictionary;
@@ -119,6 +120,8 @@ public class I18NTranslatorTest {
 	private UserPreferences mockUserPreferences;
 	@Mock
 	private ItemEntityAttributesFactory mockItemEntityAttributesFactory;
+	@Mock
+	private TwitchDataStore mockTwitchDataStore;
 
 	@Before
 	public void setup() throws IOException {
@@ -147,8 +150,8 @@ public class I18NTranslatorTest {
 	public void describeHumanoid() throws IOException {
 		NorseNameGenerator nameGenerator = new NorseNameGenerator();
 		HumanoidEntityAttributes attributes = new HumanoidEntityAttributesFactory(
-				new HairColorFactory(), new SkinColorFactory(), new AccessoryColorFactory(), new DwarvenNameGenerator(new NorseNameGenerator())
-		).create();
+				new HairColorFactory(), new SkinColorFactory(), new AccessoryColorFactory(), new DwarvenNameGenerator(new NorseNameGenerator()),
+				mockUserPreferences, mockTwitchDataStore).create(new GameContext());
 		attributes.setName(nameGenerator.create(88L, Gender.MALE));
 
 		Profession profession = new Profession();
