@@ -1,5 +1,6 @@
 Alpha 5
 
+- Twitch integration - twitch streamers can connect their account to have their viewers automatically show up in game!
 - You can now rename settlers!
 - Floors now overlap underneath walls, so the transparency at the edge of wall tiles makes sense rather than showing a grey border
 - Overhauled how floors overlap onto other tiles, requiring far less sprites to be created (similar to walls)
